Finish css for small screens

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Who's Zwicker?</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
 </head>
 <body>
 
@@ -23,20 +24,24 @@
     </nav>
   </header>
 
-  <!-- <section class="music">
+  <section class="music">
 
     <iframe class="spotify-player" src="https://open.spotify.com/embed/album/11lJYQ5vIZla1LoSmPYWdI" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
     <iframe class="apple-player" allow="autoplay *; encrypted-media *;" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/voice-memos-ep/1380980823?app=music"></iframe>
 
-    <a href="https://amu.se/album/zwicker-voice-memos"> More Streaming Services</a>
+  <div class="more">
+      <a class="more-streaming" href="https://amu.se/album/zwicker-voice-memos"> More Streaming Services</a>
+    </div>
+
 
   </section>
 
   <footer>
-
     <p>Follow On</p>
-    <img src="images/insta-logo.svg" alt="">
-  </footer> -->
+    <a class="social-links" href="#">
+      <img class="insta-follow" src="images/insta-logo.svg" alt="">
+    </a>
+  </footer>
 </body>
 </html>
