--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     <iframe class="spotify-player" src="https://open.spotify.com/embed/album/11lJYQ5vIZla1LoSmPYWdI" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
-    <iframe class="apple-player" allow="autoplay *; encrypted-media *;" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/voice-memos-ep/1380980823?app=music"></iframe>
+    <iframe class="apple-player" allow="autoplay *; encrypted-media *;" frameborder="0" height="380" max-width:"660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/voice-memos-ep/1380980823?app=music"></iframe>
 
-  <div class="more">
+  <div class="player more">
       <a class="more-streaming" href="https://amu.se/album/zwicker-voice-memos"> More Streaming Services</a>
     </div>
 
