--- a/index.html
+++ b/index.html
@@ -12,34 +12,28 @@
   <header>
 
     <div class="nav-logo">
-      <img src="images/logo-main-1.svg" alt="">
+      <a href="index.html"> <img src="images/logo-main-1.svg" alt=""> </a>
     </div>
 
     <nav class="nav">
       <ul>
-        <li> <a href="#"> Music </a> </li>
+        <li> <a href="music.html"> Music </a> </li>
         <li> <a href="#"> Graphics </a> </li>
         <li> <a href="#"> About </a> </li>
       </ul>
     </nav>
   </header>
 
-  <section class="music">
-
-    <iframe class="spotify-player" src="https://open.spotify.com/embed/album/11lJYQ5vIZla1LoSmPYWdI" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-
-    <iframe class="apple-player" allow="autoplay *; encrypted-media *;" frameborder="0" height="380" max-width:"660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/voice-memos-ep/1380980823?app=music"></iframe>
-
-  <div class="player more">
-      <a class="more-streaming" href="https://amu.se/album/zwicker-voice-memos"> More Streaming Services</a>
+  <section class="main vid-section">
+    <h2>Welcome</h2>
+    <div class="video-player">
+      <iframe class="youtube" width="560" height="315" src="https://www.youtube.com/embed/Sk7MR-S0bS0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-
-
   </section>
 
   <footer>
     <p>Follow On</p>
-    <a class="social-links" href="#">
+    <a class="social-links" href="https://www.instagram.com/whoszwicker/">
       <img class="insta-follow" src="images/insta-logo.svg" alt="">
     </a>
   </footer>
