--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="nav">
       <ul>
         <li> <a href="music.html"> Music </a> </li>
-        <li> <a href="#"> Graphics </a> </li>
+        <li> <a href="graphics.html"> Graphics </a> </li>
         <li> <a href="#"> About </a> </li>
       </ul>
     </nav>
