--- a/music.html
+++ b/music.html
@@ -17,8 +17,8 @@
 
     <nav class="nav">
       <ul>
-        <li> <a href="#"> Music </a> </li>
-        <li> <a href="#"> Graphics </a> </li>
+        <li> <a href="music.html"> Music </a> </li>
+        <li> <a href="graphics.html"> Graphics </a> </li>
         <li> <a href="#"> About </a> </li>
       </ul>
     </nav>
