Add about and content along with it

--- a/graphics.html
+++ b/graphics.html
@@ -19,12 +19,12 @@
       <ul>
         <li> <a href="music.html"> Music </a> </li>
         <li> <a href="graphics.html"> Graphics </a> </li>
-        <li> <a href="#"> About </a> </li>
+        <li> <a href="about.html"> About </a> </li>
       </ul>
     </nav>
   </header>
 
-  <section class="main">
+  <section class="main portfolio-section">
     <h2>Graphic Portfolio</h2>
 
     <div class="portfolio">
@@ -48,7 +48,7 @@
         <img src="images/portfolio/nicki-minaj.jpg" alt="">
       </div>
 
-      <div class="img-flex">
+      <div class="img-flex s-2">
         <img src="images/portfolio/used-to-cover.png" alt="">
       </div>
     </div>
