--- a/music.html
+++ b/music.html
@@ -19,7 +19,7 @@
       <ul>
         <li> <a href="music.html"> Music </a> </li>
         <li> <a href="graphics.html"> Graphics </a> </li>
-        <li> <a href="#"> About </a> </li>
+        <li> <a href="about.html"> About </a> </li>
       </ul>
     </nav>
   </header>
