--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 
   <section class="main vid-section">
     <h2>Welcome</h2>
-    <div class="video-player">
-      <iframe class="youtube" width="560" height="315" src="https://www.youtube.com/embed/Sk7MR-S0bS0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <!-- <div class="video-player"> -->
+    <p>"Untitled" Out Now!</p>
+    <div class="out-now">
+      <a href="https://amu.se/album/zwicker-untitled"> <img src="images/grey-area-1.png" alt=""> </a>
     </div>
   </section>
 
