Switch image file
switched from bigger file size

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- <div class="video-player"> -->
     <p>"Untitled" Out Now!</p>
     <div class="out-now">
-      <a href="https://amu.se/album/zwicker-untitled"> <img src="images/grey-area-1.png" alt=""> </a>
+      <a href="https://amu.se/album/zwicker-untitled"> <img src="images/grey-area-1.jpg" alt=""> </a>
     </div>
   </section>
 
