update about me page

--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i" rel="stylesheet">
+  <link href="favicon.ico" rel="shortcut icon">
 </head>
 <body>
 
@@ -27,7 +29,7 @@
     </nav>
   </header>
 
-  <section class="main island">
+  <section class="about island">
 
     <h2 class="text-center">About Zwicker</h2>
 
@@ -36,8 +38,8 @@
         <img class="img-flex" src="images/head-shot.png" alt="">
       </div>
 
-      <div class="unit xs-1 m-1-2 gutter-1-2 push-2">
-        <p>Veteran producer turned artist. Creating music, graphic art and even clothing as an outlet for mental health, for himself, and others who need the confidence to speak up. Zwicker’s shaking up the Ottawa scene with his unique sound and style unmatched by anyone else. This jack of all trades artist, can do it all. So, who’s Zwicker?</p>
+      <div class="unit xs-1 m-1-2 gutter-1-2 push-2 about-card">
+        <p>The sprouting of artistic expression started for <i>Zach Zwicker</i> in his early life when he first started in film, shooting and editing videos with his friends in grade school. From there he dove head first into every aspect of art he could get his hands on. Self-taught on his own time, he learned to use programs from Adobe and Sony, like Photoshop, Illustrator, After Effects, Vegas and more. Over time he developed skills in music creation and mix engineering, animation, logo design, social media advertising/marketing, website design, film and video editing and photography. Now finished his first year of the graphic design program at Algonquin College, this jack of all trades artist working harder than ever to develop his skills even further.</p>
       </div>
     </div>
   </section>
