--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <title>Who's Zwicker?</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
+  <link href="favicon.ico" rel="shortcut icon">
 </head>
 <body>
 
@@ -18,7 +20,7 @@
     </div>
 
     <nav class="nav">
-      <ul>
+      <ul class="list-group">
         <li> <a href="music.html"> Music </a> </li>
         <li> <a href="graphics.html"> Graphics </a> </li>
         <li> <a href="about.html"> About </a> </li>
@@ -26,11 +28,11 @@
     </nav>
   </header>
 
-  <section class="main vid-section">
-    <h2>Welcome</h2>
+  <section class="island">
+    <h2 class="text-center">Welcome</h2>
     <!-- <div class="video-player"> -->
-    <p>"Untitled" Out Now!</p>
-    <div class="out-now">
+    <p class="text-center">Click below to listen to "Untitled" now!</p>
+    <div class="unit xs-1 text-center out-now">
       <a href="https://amu.se/album/zwicker-untitled"> <img src="images/grey-area-1.jpg" alt=""> </a>
     </div>
   </section>
