--- a/music.html
+++ b/music.html
@@ -8,6 +8,7 @@
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
+  <link href="favicon.ico" rel="shortcut icon">
 </head>
 <body>
 
