add hero-banners to the home page

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="unit xs-1 m-1-2 gutter-1-2 push-2 about-card">
-        <p>The sprouting of artistic expression started for <i>Zach Zwicker</i> in his early life when he first started in film, shooting and editing videos with his friends in grade school. From there he dove head first into every aspect of art he could get his hands on. Self-taught on his own time, he learned to use programs from Adobe and Sony, like Photoshop, Illustrator, After Effects, Vegas and more. Over time he developed skills in music creation and mix engineering, animation, logo design, social media advertising/marketing, website design, film and video editing and photography. Now finished his first year of the graphic design program at Algonquin College, this jack of all trades artist working harder than ever to develop his skills even further.</p>
+        <p>The sprouting of artistic expression started for <i>Zach Zwicker</i> in his early life when he first started in film, shooting and editing videos with his friends in grade school. From there he dove head first into every aspect of art he could get his hands on. Self-taught on his own time, he learned to use programs from Adobe and Sony, like Photoshop, Illustrator, After Effects, Vegas and more. Over time he developed skills in music creation and mix engineering, animation, logo design, social media advertising/marketing, website design, film and video editing and photography. Now finished his first year of the graphic design program at Algonquin College, this jack of all trades artist is working harder than ever to develop his skills even further.</p>
       </div>
     </div>
   </section>
