--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <header>
+  <header class="push">
 
     <div class="nav-logo">
       <a href="index.html"> <img src="images/logo-main-1.svg" alt=""> </a>
@@ -28,14 +28,29 @@
     </nav>
   </header>
 
-  <section class="island">
-    <h2 class="text-center">Welcome</h2>
-    <!-- <div class="video-player"> -->
-    <p class="text-center">Click below to listen to "Untitled" now!</p>
-    <div class="unit xs-1 text-center out-now">
-      <a href="https://amu.se/album/zwicker-untitled"> <img src="images/grey-area-1.jpg" alt=""> </a>
+  <section class="home-banners">
+    <h2 class="text-center push-none">Welcome</h2>
+
+    <div class="grid">
+      <a class="unit xs-1 m-1-2 relative" href="music.html">
+        <img class="img-flex" src="https://via.placeholder.com/800x600" alt="">
+
+        <div class="pin-center text-center">
+          <h3 class="giga push-none"> It's music to my ears</h3>
+          <p><i>Listen to Untitled</i> and <i>Voice Memos</i> out now on all platforms</p>
+        </div>
+      </a>
+
+      <a class="unit xs-1 m-1-2 relative" href="graphics.html">
+        <img class="img-flex" src="https://via.placeholder.com/800x600" alt="">
+
+        <div class="pin-center text-center">
+          <h3 class="giga push-none">The latest and greatest,</h3>
+          <p>take a peak at the newest portfolio additions</p>
+        </div>
+      </a>
+
     </div>
-  </section>
 
   <footer>
     <p>Follow On</p>
