--- a/graphics.html
+++ b/graphics.html
@@ -54,7 +54,7 @@
       <div class="unit img-flex xs-1 m-1-2 l-1-3 gutter-1-2 push-2">
         <a class="link-box g-card" href="images/portfolio/guardians-poster.png">
           <img class="push-1-2" src="images/thumbnails/guardians-poster-thumbnail.png" alt="">
-          <h3 class="mega">Hitchhikers guide to the Galaxy theater poster</h3>
+          <h3 class="mega">Hitchhikers Guide to the Galaxy theater poster</h3>
           <p>February 2019</p>
         </a>
       </div>
