--- a/music.html
+++ b/music.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <header>
+  <header class="push">
 
     <div class="nav-logo">
       <a href="index.html"> <img src="images/logo-main-1.svg" alt=""> </a>
@@ -26,20 +26,25 @@
       </ul>
     </nav>
   </header>
-  <section class="island music-section">
+
+  <section class="music-section">
+
     <h2 class="text-center"> Music</h2>
 
-    <section class="music">
-      <iframe class="spotify-player" src="https://open.spotify.com/embed/album/11lJYQ5vIZla1LoSmPYWdI" width="300" max-width="420" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <section class="grid">
 
-      <iframe class="apple-player" allow="autoplay *; encrypted-media *;" frameborder="0" height="380" max-width:"420px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/voice-memos-ep/1380980823?app=music"></iframe>
+      <iframe class="unit xs-1 m-1-2 gutter push-2 spotify-player" src="https://open.spotify.com/embed/album/3nrhl0VZqzkcEeZxmptiZY" width="300" height="380" max-width="420px" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
-      <div class="more">
-        <a class="more-streaming" href="https://amu.se/album/zwicker-voice-memos"> More Streaming Services</a>
-      </div>
+      <iframe class="unit xs-1 m-1-2 gutter push-2 apple-player" allow="autoplay *; encrypted-media *;" frameborder="0" height="380" width="300" max-width:"420px; overflow:hidden; background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/voice-memos-ep/1380980823?app=music"></iframe>
 
     </section>
+
+    <div class="more push-2">
+      <a class="more-streaming" href="https://amu.se/album/zwicker-voice-memos"> Listen to <i>Voice Memos</i> here</a>
+    </div>
+
   </section>
+
   <footer>
     <p>Follow On</p>
     <a class="social-links" href="https://www.instagram.com/whoszwicker/">
