--- a/index.html
+++ b/index.html
@@ -33,25 +33,26 @@
 
     <div class="grid">
       <a class="unit xs-1 m-1-2 relative" href="music.html">
-        <img class="img-flex" src="https://via.placeholder.com/800x600" alt="">
+        <img class="img-flex" src="images/homepage-music-1.jpg" alt="">
 
         <div class="pin-center text-center">
-          <h3 class="giga push-none"> It's music to my ears</h3>
+          <h3 class="giga push-1-2"> It's music to my ears</h3>
           <p><i>Listen to Untitled</i> and <i>Voice Memos</i> out now on all platforms</p>
         </div>
       </a>
 
       <a class="unit xs-1 m-1-2 relative" href="graphics.html">
-        <img class="img-flex" src="https://via.placeholder.com/800x600" alt="">
+        <img class="img-flex" src="images/homepage-graphics-1.jpg" alt="">
 
         <div class="pin-center text-center">
-          <h3 class="giga push-none">The latest and greatest,</h3>
+          <h3 class="giga push-1-2">The latest and greatest,</h3>
           <p>take a peak at the newest portfolio additions</p>
         </div>
       </a>
 
     </div>
-
+  </section>
+  
   <footer>
     <p>Follow On</p>
     <a class="social-links" href="https://www.instagram.com/whoszwicker/">
